feat: implement POST /standplan/shift/{shiftId}
